--- a/DMSDriver/DMSDriver/Resources/Storyboards/Dashboard.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Dashboard.storyboard
@@ -18,41 +18,10 @@
                         <viewControllerLayoutGuide type="top" id="GST-Q4-NwQ"/>
                         <viewControllerLayoutGuide type="bottom" id="4x1-j2-JGp"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ZHT-dv-qrO">
+                    <view key="view" contentMode="scaleToFill" id="ZHT-dv-qrO" customClass="GradientView" customModule="DMSDriver" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2z7-Pj-D9p" customClass="GradientView" customModule="DMSDriver" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DASHBOARD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kmy-X6-zbT">
-                                        <rect key="frame" x="20" y="3.5" width="101.5" height="18"/>
-                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="16"/>
-                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="Kmy-X6-zbT" firstAttribute="centerY" secondItem="2z7-Pj-D9p" secondAttribute="centerY" multiplier="0.7" id="HGy-FW-lBf"/>
-                                    <constraint firstItem="Kmy-X6-zbT" firstAttribute="leading" secondItem="2z7-Pj-D9p" secondAttribute="leading" constant="20" id="LoM-Gu-DYu"/>
-                                    <constraint firstAttribute="height" constant="35" id="tCh-aj-AQM"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="startLocation">
-                                        <real key="value" value="0.0"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="endLocation">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="endColor">
-                                        <color key="value" red="0.90588235289999997" green="0.90588235289999997" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6mK-B0-RwL" userLabel="vType">
                                 <rect key="frame" x="0.0" y="35" width="375" height="50"/>
                                 <subviews>
@@ -162,7 +131,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="105" height="109"/>
                                                     <subviews>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="items" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X1c-4v-eGA">
-                                                            <rect key="frame" x="0.0" y="101" width="105" height="0.0"/>
+                                                            <rect key="frame" x="0.0" y="93" width="105" height="0.0"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" id="JJb-cV-zFV"/>
                                                             </constraints>
@@ -174,7 +143,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Approving" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxx-R1-DWY">
-                                                            <rect key="frame" x="2" y="68.5" width="101" height="32.5"/>
+                                                            <rect key="frame" x="2" y="76.5" width="101" height="16.5"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
@@ -188,14 +157,14 @@
                                                             </variation>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BirthdayMember" translatesAutoresizingMaskIntoConstraints="NO" id="XuN-0P-WDf">
-                                                            <rect key="frame" x="32.5" y="18.5" width="40" height="40"/>
+                                                            <rect key="frame" x="32.5" y="26.5" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="XuN-0P-WDf" secondAttribute="height" multiplier="1:1" id="5A4-Wu-aav"/>
                                                                 <constraint firstAttribute="height" constant="40" id="jWy-AG-79h"/>
                                                             </constraints>
                                                         </imageView>
                                                         <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9di-a7-gqi">
-                                                            <rect key="frame" x="67.5" y="8.5" width="20" height="20"/>
+                                                            <rect key="frame" x="67.5" y="16.5" width="20" height="20"/>
                                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="20" id="Ftm-o6-7xR"/>
@@ -333,20 +302,31 @@
                         <color key="backgroundColor" red="0.90588235289999997" green="0.90588235289999997" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="4x1-j2-JGp" firstAttribute="top" secondItem="4nR-fT-yFz" secondAttribute="bottom" constant="20" id="2Pl-Qq-hjr"/>
-                            <constraint firstItem="6mK-B0-RwL" firstAttribute="top" secondItem="2z7-Pj-D9p" secondAttribute="bottom" id="BIu-6B-Ik8"/>
                             <constraint firstItem="6mK-B0-RwL" firstAttribute="leading" secondItem="ZHT-dv-qrO" secondAttribute="leading" id="C7G-6s-btn"/>
                             <constraint firstItem="TCE-15-Pg8" firstAttribute="leading" secondItem="ZHT-dv-qrO" secondAttribute="leading" constant="20" id="Cx8-xW-95y"/>
-                            <constraint firstItem="4A6-UY-eF6" firstAttribute="trailing" secondItem="2z7-Pj-D9p" secondAttribute="trailing" id="MSR-uo-lwv"/>
                             <constraint firstItem="4A6-UY-eF6" firstAttribute="trailing" secondItem="6mK-B0-RwL" secondAttribute="trailing" id="Nse-Zj-fDa"/>
                             <constraint firstItem="4nR-fT-yFz" firstAttribute="top" secondItem="TCE-15-Pg8" secondAttribute="bottom" constant="10" id="Qgn-PC-vm9"/>
                             <constraint firstAttribute="trailing" secondItem="TCE-15-Pg8" secondAttribute="trailing" constant="20" id="Voo-3F-r0m"/>
-                            <constraint firstItem="2z7-Pj-D9p" firstAttribute="leading" secondItem="4A6-UY-eF6" secondAttribute="leading" id="W2y-7p-hdI"/>
+                            <constraint firstItem="6mK-B0-RwL" firstAttribute="top" secondItem="GST-Q4-NwQ" secondAttribute="bottom" constant="5" id="cKz-3Q-vzI"/>
                             <constraint firstItem="4nR-fT-yFz" firstAttribute="leading" secondItem="ZHT-dv-qrO" secondAttribute="leading" constant="20" id="ff2-vd-IYO"/>
                             <constraint firstItem="TCE-15-Pg8" firstAttribute="top" secondItem="6mK-B0-RwL" secondAttribute="bottom" constant="5" id="jiy-Es-UuQ"/>
                             <constraint firstAttribute="trailing" secondItem="4nR-fT-yFz" secondAttribute="trailing" constant="20" id="tNx-oG-msj"/>
-                            <constraint firstItem="2z7-Pj-D9p" firstAttribute="top" secondItem="ZHT-dv-qrO" secondAttribute="top" id="u5Y-7d-ZWQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4A6-UY-eF6"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                <color key="value" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="startLocation">
+                                <real key="value" value="0.0"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="endLocation">
+                                <real key="value" value="0.050000000000000003"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <connections>
                         <outlet property="clvContent" destination="4nR-fT-yFz" id="7fa-iO-o3o"/>
