--- a/DMSDriver/DMSDriver/Resources/Storyboards/Common.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Common.storyboard
@@ -946,7 +946,7 @@
                                                     <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="submit"/>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="onbtnClickCancelWithBtn:" destination="2FH-Vm-Dy1" eventType="touchUpInside" id="AJO-Ay-Qow"/>
+                                                    <action selector="onbtnClickDoneWithBtn:" destination="2FH-Vm-Dy1" eventType="touchUpInside" id="5Pf-Fg-ng3"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SmY-kA-nke">
