--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -74,10 +74,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JRs-Di-fTr">
-                                                    <rect key="frame" x="10" y="10" width="355" height="49.5"/>
+                                                    <rect key="frame" x="10" y="10" width="355" height="50"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocU-yS-FVE">
-                                                            <rect key="frame" x="15" y="5" width="35.5" height="39.5"/>
+                                                            <rect key="frame" x="15" y="5" width="35.5" height="40"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -103,7 +103,7 @@
                                                             <state key="normal" title="Button"/>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxY-EP-yCK">
-                                                            <rect key="frame" x="95.5" y="15" width="35.5" height="19.5"/>
+                                                            <rect key="frame" x="95.5" y="15.5" width="35.5" height="19.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294117647058" green="0.36470588235294116" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -156,7 +156,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l7d-RM-iiR">
-                                                    <rect key="frame" x="10" y="10" width="355" height="262.5"/>
+                                                    <rect key="frame" x="10" y="10" width="355" height="263"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="urj-dp-853">
                                                             <rect key="frame" x="15" y="10" width="34.5" height="16"/>
@@ -429,16 +429,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xK1-J9-P8K">
-                                                    <rect key="frame" x="10" y="0.0" width="355" height="60.5"/>
+                                                    <rect key="frame" x="10" y="0.0" width="355" height="61"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6F5-4b-nJo">
-                                                            <rect key="frame" x="65.5" y="20.5" width="35.5" height="19.5"/>
+                                                            <rect key="frame" x="65.5" y="21" width="35.5" height="19.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Om-d9-exr">
-                                                            <rect key="frame" x="15" y="5" width="35.5" height="50.5"/>
+                                                            <rect key="frame" x="15" y="5" width="35.5" height="51"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -1294,22 +1294,22 @@
                                 <rect key="frame" x="0.0" y="387" width="375" height="280"/>
                                 <subviews>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The next stop is:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nE1-nQ-zcR">
-                                        <rect key="frame" x="139.5" y="4" width="96.5" height="36.5"/>
+                                        <rect key="frame" x="139.5" y="4" width="96.5" height="39.5"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="13"/>
                                         <color key="textColor" red="0.47058823529999999" green="0.51764705879999995" blue="0.61960784310000006" alpha="0.56000000000000005" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ghh-N9-V0o">
-                                        <rect key="frame" x="24" y="44.5" width="327" height="132.5"/>
+                                        <rect key="frame" x="24" y="47.5" width="327" height="129.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Te6-5V-wfW">
-                                                <rect key="frame" x="0.0" y="0.0" width="327" height="52"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="327" height="49"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="start_order_location" translatesAutoresizingMaskIntoConstraints="NO" id="5bm-Re-iSR">
-                                                        <rect key="frame" x="10" y="15" width="43.5" height="22"/>
+                                                        <rect key="frame" x="10" y="15" width="43.5" height="19"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bs-iY-qtd">
-                                                        <rect key="frame" x="57.5" y="15" width="212.5" height="22"/>
+                                                        <rect key="frame" x="57.5" y="15" width="212.5" height="19"/>
                                                         <string key="text">Zela Hahar 70 Modiin ISRAEL
 
 </string>
@@ -1332,16 +1332,16 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4MW-nv-z1g">
-                                                <rect key="frame" x="0.0" y="62" width="327" height="70.5"/>
+                                                <rect key="frame" x="0.0" y="59" width="327" height="70.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wt7-SN-CWd">
                                                         <rect key="frame" x="0.0" y="0.0" width="102.5" height="70.5"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start_order_car" translatesAutoresizingMaskIntoConstraints="NO" id="ggS-lb-TWL">
-                                                                <rect key="frame" x="39" y="10" width="24" height="24"/>
+                                                                <rect key="frame" x="43" y="10" width="16" height="16"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Delivery" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9s-Mm-J3R">
-                                                                <rect key="frame" x="4" y="44" width="94.5" height="16.5"/>
+                                                                <rect key="frame" x="4" y="36" width="94.5" height="24.5"/>
                                                                 <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -1362,10 +1362,10 @@
                                                         <rect key="frame" x="112.5" y="0.0" width="102" height="70.5"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start_order_clock" translatesAutoresizingMaskIntoConstraints="NO" id="0bV-Eq-Gqt">
-                                                                <rect key="frame" x="40.5" y="10" width="21.5" height="21.5"/>
+                                                                <rect key="frame" x="43" y="10" width="16" height="16"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="10:00 - 14:00" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRB-dS-zY9">
-                                                                <rect key="frame" x="4" y="41.5" width="94" height="19"/>
+                                                                <rect key="frame" x="4" y="36" width="94" height="24.5"/>
                                                                 <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -1386,10 +1386,10 @@
                                                         <rect key="frame" x="224.5" y="0.0" width="102.5" height="70.5"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start_order_wait" translatesAutoresizingMaskIntoConstraints="NO" id="s2k-fl-1Zo">
-                                                                <rect key="frame" x="43.5" y="10" width="15.5" height="20.5"/>
+                                                                <rect key="frame" x="43.5" y="10" width="16" height="16"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="25-30 min" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uP-Bx-RFq">
-                                                                <rect key="frame" x="4" y="40.5" width="94.5" height="20"/>
+                                                                <rect key="frame" x="4" y="36" width="94.5" height="24.5"/>
                                                                 <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -1549,7 +1549,9 @@
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
+                        <outlet property="btnCancel" destination="chr-Vq-r6V" id="KIA-NM-mEE"/>
                         <outlet property="btnHidenViewAction" destination="zGf-kL-cWz" id="pQs-C1-fMJ"/>
+                        <outlet property="btnStart" destination="Rtn-c5-Qqy" id="2iO-wg-BaJ"/>
                         <outlet property="conBotActionView" destination="JKG-Lr-lgX" id="Njy-wt-VYu"/>
                         <outlet property="lblAddress" destination="2bs-iY-qtd" id="ZBb-0J-FX4"/>
                         <outlet property="lblDateTime" destination="FRB-dS-zY9" id="MP5-Jz-wPm"/>
@@ -2072,7 +2074,7 @@
                                                                             <rect key="frame" x="0.0" y="58" width="365" height="149"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4uq-ta-B72" id="t5t-Nr-hdA">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="365" height="149"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="365" height="148.5"/>
                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wTZ-W1-Eo0">
